Show send time of contact request message

--- a/lang/murmeli-texts-de.txt
+++ b/lang/murmeli-texts-de.txt
@@ -155,6 +155,7 @@ nomessages=Keine neue Nachrichten.
 sender.unknown=Absender unbekannt
 recpt.unknown=<unbekannt>
 confirm.messagesent=Nachricht geschickt.
+sendtime.yesterday=Gestern
 
 [composemessage]
 title=Neue Nachricht
