Rejection of contact request

--- a/lang/murmeli-texts-de.txt
+++ b/lang/murmeli-texts-de.txt
@@ -142,8 +142,9 @@ searchfor=Suche nach
 contactrequests=Kontakt-Anfragen
 prompt.contactaccept=Nachricht, um die Anfrage von '%s' zu akzeptieren
 prompt.contactreject=Anfrage von '%s' ablehnen
-contactrequest.refused=Die Anfrage ist nicht akzeptiert worden.
-contactrequest.accepted=Die Anfrage wurde akzeptiert, aber keine Nachricht wurde geschickt.
+contactrequest.refused=Deine Anfrage ist nicht akzeptiert worden.
+contactrequest.accepted=Deine Anfrage wurde akzeptiert.
+contactrequest.acceptednomessage=Deine Anfrage wurde akzeptiert, aber ohne Nachricht.
 contactresponses=Kontakt-Antworten
 contactresponse.delete=Diese Antwort von '%s' löschen?
 delete=Diese Nachricht löschen?
