--- a/lang/murmeli-texts-en.txt
+++ b/lang/murmeli-texts-en.txt
@@ -145,7 +145,8 @@ contactrequests=Contact Requests
 prompt.contactaccept=Message to accept request from '%s'
 prompt.contactreject=Reject request from '%s'
 contactrequest.refused=Your request was not accepted.
-contactrequest.accepted=Your request was accepted, but no message was given.
+contactrequest.accepted=Your request was accepted.
+contactrequest.acceptednomessage=Your request was accepted, but no message was given.
 contactresponses=Contact Responses
 contactresponse.delete=Delete response from '%s'?
 delete=Delete this message?
