--- a/lang/murmeli-texts-en.txt
+++ b/lang/murmeli-texts-en.txt
@@ -134,7 +134,7 @@ fingerprintcheck.intro2=To do this, find another way to contact this person (for
 fingerprintcheck.yourwords=Here are the five words which you should say to '%s'.
 fingerprintcheck.theirwords=And '%s' should say one of these word sets to you.
 fingerprintcheck.alreadydone=You have already verified the words from '%s'.
-error.fingerprintcheckfailed=Those aren't the codewords expected from that key.  Please check again.
+error.fingerprintcheckfailed=Those aren't the codewords expected from that key.  Please check (carefully!) again.
 
 [messages]
 title=Messages
