Show contact status, show fingerprint even when trusted

--- a/lang/murmeli-texts-de.txt
+++ b/lang/murmeli-texts-de.txt
@@ -112,6 +112,11 @@ details.description=Beschreibung
 details.interests=Interessen
 details.birthday=Geburtstag
 details.userid=Benutzerid
+details.status=Status
+details.status.self=Selbst
+details.status.requested=Angefordert
+details.status.untrusted=Unbestätigt
+details.status.trusted=Bestätigt
 details.robotstatus=Roboter
 details.robotstatus.none=Keinen gesetzt
 details.robotstatus.requested=Angefordert
@@ -127,6 +132,7 @@ storm.title=Murmeli Netzwerk
 confirmdelete=Willst du sicher diesen Kontakt löschen?  Ihr werdet nicht mehr miteinander kommunizieren, ohne die Verbindung neu aufzubauen.
 desc.confirmfingerprints=Dieser Schlüssel ist noch nicht bestätigt worden.  Um sicherzustellen, dass niemand einen anderen Schlüssel dazwischengefügt hat, musst du dies bestätigen.
 link.confirmfingerprints=Schlüssel bestätigen
+desc.reconfirmfingerprints=Diesen Schlüssel hast du bereits bestätigt.  Um das von beiden Seiten zu machen kannst du hier dein Teil nochmals generieren.
 fingerprintcheck.intro1=Es ist ganz wichtig zu prüfen ob dieser Schlüssel der richtige ist, auch dann wenn du sicher bist, dass die Person stimmt!
 fingerprintcheck.intro2=Dafür brauchst du eine andere Kontaktmöglichkeit, (z.B. telefonisch, oder persönlich) und gibst der Person die folgenden Wörter.  Das muss unbedingt abseits von Murmeli stattfinden für eine unabhängige Bestätigung.
 fingerprintcheck.yourwords=Hier sind die fünf Wörter die du '%s' mitteilen solltest.
