Show warning when key generation failed

--- a/lang/murmeli-texts-de.txt
+++ b/lang/murmeli-texts-de.txt
@@ -209,6 +209,7 @@ export=Exportieren
 
 [gui]
 dialogtitle.error=Fehler
+dialogtitle.warning=Warnung
 dialogtitle.openimage=Bilddatei Öffnen
 fileselection.filetypes.jpg=Bilddateien (*.jpg)
 
