Show thumbnails of shared contacts on details page

--- a/lang/murmeli-texts-de.txt
+++ b/lang/murmeli-texts-de.txt
@@ -124,6 +124,7 @@ details.robotstatus.requested=Angefordert
 details.robotstatus.enabled=Aktiviert
 details.robotstatus.enabled.online=Aktiviert, online
 details.robotstatus.enabled.offline=Aktiviert, offline
+details.sharedcontacts=Gemeinsame Bekannten
 details.editlink.before=Diese Details
 details.editlink.after=
 link.addnewcontact=Kontakt hinzufügen
@@ -133,7 +134,7 @@ storm.title=Murmeli Netzwerk
 confirmdelete=Willst du sicher diesen Kontakt löschen?  Ihr werdet nicht mehr miteinander kommunizieren, ohne die Verbindung neu aufzubauen.
 desc.confirmfingerprints=Dieser Schlüssel ist noch nicht bestätigt worden.  Um sicherzustellen, dass niemand einen anderen Schlüssel dazwischengefügt hat, musst du dies bestätigen.
 link.confirmfingerprints=Schlüssel bestätigen
-desc.reconfirmfingerprints=Diesen Schlüssel hast du bereits bestätigt.  Um das von beiden Seiten zu machen kannst du hier dein Teil nochmals generieren.
+desc.reconfirmfingerprints=Diesen Schlüssel hast du bereits bestätigt.  Um die Wörter nochmals zu generieren:
 fingerprintcheck.intro1=Es ist ganz wichtig zu prüfen ob dieser Schlüssel der richtige ist, auch dann wenn du sicher bist, dass die Person stimmt!
 fingerprintcheck.intro2=Dafür brauchst du eine andere Kontaktmöglichkeit, (z.B. telefonisch, oder persönlich) und gibst der Person die folgenden Wörter.  Das muss unbedingt abseits von Murmeli stattfinden für eine unabhängige Bestätigung.
 fingerprintcheck.yourwords=Hier sind die fünf Wörter die du '%s' mitteilen solltest.
