--- a/lang/murmeli-texts-en.txt
+++ b/lang/murmeli-texts-en.txt
@@ -126,6 +126,7 @@ details.robotstatus.requested=Requested
 details.robotstatus.enabled=Enabled
 details.robotstatus.enabled.online=Enabled, online
 details.robotstatus.enabled.offline=Enabled, offline
+details.sharedcontacts=Shared contacts
 details.editlink.before=
 details.editlink.after=these details
 link.addnewcontact=Add new contact
@@ -135,7 +136,7 @@ storm.title=Murmeli Network
 confirmdelete=Are you sure you want to delete this contact?  You won't be able to contact each other again without reconnecting.
 desc.confirmfingerprints=You haven't confirmed yet that this key is correct.  To make sure that nobody has inserted their own key in-between, you need to confirm this.
 link.confirmfingerprints=Check key
-desc.reconfirmfingerprints=You have confirmed this key already.  To confirm this from both sides, you can generate your part again here.
+desc.reconfirmfingerprints=You have confirmed this key already.  To regenerate your words:
 fingerprintcheck.intro1=It's important to check that this is really the right key, even if you're sure that it's the right person!
 fingerprintcheck.intro2=To do this, find another way to contact this person (for example telephone, or meeting in person) and give them the following words for them to check.  You cannot use Murmeli messages for this.
 fingerprintcheck.yourwords=Here are the five words which you should say to '%s'.
