Show contacts to recommend to friend

--- a/lang/murmeli-texts-de.txt
+++ b/lang/murmeli-texts-de.txt
@@ -125,6 +125,8 @@ details.robotstatus.enabled=Aktiviert
 details.robotstatus.enabled.online=Aktiviert, online
 details.robotstatus.enabled.offline=Aktiviert, offline
 details.sharedcontacts=Gemeinsame Bekannten
+details.recommendcontacts=Empfehlungen für
+details.recommendname=%s empfehlen
 details.editlink.before=Diese Details
 details.editlink.after=
 link.addnewcontact=Kontakt hinzufügen
@@ -155,6 +157,7 @@ contactrequest.accepted=Deine Anfrage wurde akzeptiert.
 contactrequest.acceptednomessage=Deine Anfrage wurde akzeptiert, aber ohne Nachricht.
 contactresponses=Kontakt-Antworten
 contactresponse.delete=Diese Antwort von '%s' löschen?
+contactrefer.confirm=Empfehlungen an '%s' und '%s' schicken
 delete=Diese Nachricht löschen?
 mails=Mails
 from=Von
