--- a/lang/murmeli-texts-en.txt
+++ b/lang/murmeli-texts-en.txt
@@ -127,6 +127,8 @@ details.robotstatus.enabled=Enabled
 details.robotstatus.enabled.online=Enabled, online
 details.robotstatus.enabled.offline=Enabled, offline
 details.sharedcontacts=Shared contacts
+details.recommendcontacts=Recommendations for
+details.recommendname=recommend %s
 details.editlink.before=
 details.editlink.after=these details
 link.addnewcontact=Add new contact
@@ -157,6 +159,7 @@ contactrequest.accepted=Your request was accepted.
 contactrequest.acceptednomessage=Your request was accepted, but no message was given.
 contactresponses=Contact Responses
 contactresponse.delete=Delete response from '%s'?
+contactrefer.confirm=Send referral messages to both '%s' and '%s'
 delete=Delete this message?
 mails=Mails
 from=From
