--- a/lang/murmeli-texts-de.txt
+++ b/lang/murmeli-texts-de.txt
@@ -133,7 +133,7 @@ link.addnewcontact=Kontakt hinzufügen
 link.addrobot=Roboter setzen
 link.showstorm=Netzwerk skizzieren
 storm.title=Murmeli Netzwerk
-confirmdelete=Willst du sicher diesen Kontakt löschen?  Ihr werdet nicht mehr miteinander kommunizieren, ohne die Verbindung neu aufzubauen.
+confirmdelete=Willst du sicher diesen Kontakt löschen?  Ihr werdet nicht mehr miteinander kommunizieren können, ohne die Verbindung neu aufzubauen.
 desc.confirmfingerprints=Dieser Schlüssel ist noch nicht bestätigt worden.  Um sicherzustellen, dass niemand einen anderen Schlüssel dazwischengefügt hat, musst du dies bestätigen.
 link.confirmfingerprints=Schlüssel bestätigen
 desc.reconfirmfingerprints=Diesen Schlüssel hast du bereits bestätigt.  Um die Wörter nochmals zu generieren:
