--- a/lang/murmeli-texts-en.txt
+++ b/lang/murmeli-texts-en.txt
@@ -157,6 +157,7 @@ prompt.contactreject=Reject request from '%s'
 contactrequest.refused=Your request was not accepted.
 contactrequest.accepted=Your request was accepted.
 contactrequest.acceptednomessage=Your request was accepted, but no message was given.
+contactrequest.recommends=recommends
 contactresponses=Contact Responses
 contactresponse.delete=Delete response from '%s'?
 contactrefer.confirm=Send referral messages to both '%s' and '%s'
