Confirm key export

--- a/lang/murmeli-texts-de.txt
+++ b/lang/murmeli-texts-de.txt
@@ -105,7 +105,8 @@ adduser.displaynamefield=Name der angezeigt wird
 adduser.messagefield=Nachricht, um dich vorzustellen
 exportkey.intro=Um deinen Roboter aufzusetzen, musst du deinen öffentlichen Schlüssel zuerst exportieren und auf den Roboter kopieren.
 exportkey.buttonpreamble=Mit diesem Knopf kannst du den öffentlichen Schlüsseln nach deinem Data-Ordner exportieren
-addrobot.intro=Gib bitte die Id des Roboters ein.  Der Roboter musst deinen Schlüssel schon kennen.
+addrobot.intro=Gib bitte die Id des Roboters ein.  Der Roboter muss deinen Schlüssel schon kennen.
+confirm.keyexported=Schlüssel zu deinem Datenverzeichnis exportiert.
 details.name=Name
 details.displayname=Für mich so anzeigen
 details.owndescription=Wer bist du?
