Beginnings of robot removal

--- a/lang/murmeli-texts-de.txt
+++ b/lang/murmeli-texts-de.txt
@@ -107,6 +107,7 @@ exportkey.intro=Um deinen Roboter aufzusetzen, musst du deinen öffentlichen Sch
 exportkey.buttonpreamble=Mit diesem Knopf kannst du den öffentlichen Schlüsseln nach deinem Data-Ordner exportieren
 addrobot.intro=Gib bitte die Id des Roboters ein.  Der Roboter muss deinen Schlüssel schon kennen.
 confirm.keyexported=Schlüssel zu deinem Datenverzeichnis exportiert.
+removerobot.confirm=Diesen konfigurierten Roboter wirklich entfernen?
 details.name=Name
 details.displayname=Für mich so anzeigen
 details.owndescription=Wer bist du?
@@ -132,6 +133,7 @@ details.editlink.before=Diese Details
 details.editlink.after=
 link.addnewcontact=Kontakt hinzufügen
 link.addrobot=Roboter setzen
+link.removerobot=Roboter entfernen
 link.showstorm=Netzwerk skizzieren
 storm.title=Murmeli Netzwerk
 confirmdelete=Willst du sicher diesen Kontakt löschen?  Ihr werdet nicht mehr miteinander kommunizieren können, ohne die Verbindung neu aufzubauen.
