--- a/lang/murmeli-texts-en.txt
+++ b/lang/murmeli-texts-en.txt
@@ -109,6 +109,7 @@ exportkey.intro=To setup your robot, you need to first export your public key to
 exportkey.buttonpreamble=Use this button to export your public key to your data directory
 addrobot.intro=Enter or paste the id of the robot to add.  The robot must already know your public key.
 confirm.keyexported=Key exported to your data directory.
+removerobot.confirm=Remove this configured robot?
 details.name=Name
 details.displayname=Display for me as
 details.owndescription=Describe yourself
@@ -134,6 +135,7 @@ details.editlink.before=
 details.editlink.after=these details
 link.addnewcontact=Add new contact
 link.addrobot=Add robot
+link.removerobot=Remove robot
 link.showstorm=Draw network
 storm.title=Murmeli Network
 confirmdelete=Are you sure you want to delete this contact?  You won't be able to contact each other again without reconnecting.
