Page to be shown when settings have been changed

--- a/lang/murmeli-texts-de.txt
+++ b/lang/murmeli-texts-de.txt
@@ -191,6 +191,7 @@ language=Sprache
 friendsseefriends=Kontakte sind für andere sichtbar
 allowfriendrequests=Anfragen von Unbekannten erlaubt
 showlogwindow=Logmeldungen anzeigen
+changed=Deine Einstellungen wurden erfolgreich gespeichert.
 
 [button]
 back=Zurück
